<resources>
    <string name="app_name">DoiT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">log in</string>
    <string name="register">register</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="isClickedPassword">password</string>
    <string name="isClickedFirstName">firstName</string>
    <string name="isClickedLastName">lastName</string>
    <string name="isClickedPhone">phone</string>
    <string name="isClickedEmail">email</string>
    <string name="user_profile_image">user profile image</string>
    <string name="replace_image">click me for replace</string>
    <string name="submit_changes">Submit changes</string>
    <string name="user_details_edit">user details edit</string>
    <string name="logout">Logout</string>
    <string name="group">group</string>
    <string name="group_name">Group Name</string>
    <string name="task_name">Task Name</string>
    <string name="group_dec">Description</string>
    <string name="admins">ADMINS</string>
    <string name="assignee">Assignee</string>
    <string name="members">Members</string>
    <string name="add_members">Add members</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="add_group">add group</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="value_title">Value:</string>
    <string name="add_task">Add Task</string>
    <string name="target_date">Target date</string>
    <string name="about_us">About us</string>
    <string name="logout_menu">Logout</string>
    <string name="exit">Exit</string>
    <string name="about_paragraph"><![CDATA[DoiT app\nCreated by two students\nin the College of Management\nItay Frishman & Noam Peleg]]></string>
    <string name="open_by">Open by</string>
    <string name="created_date">Created date</string>
    <string name="finish_at">finish_at</string>
    <string name="status">Status</string>
    <string name="summary">Summary</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="task_image">Task image</string>
    <string name="save">Save</string>
    <string name="total_task_done">Total Task Done</string>
    <string name="members_title">Members:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="file_key">file_key</string>
    <string name="add_user">Add user</string>
    <string name="select_user">select user</string>
    <string name="this_group_n_does_not_have_tasks_yet">This Group\nDoes not have tasks yet</string>
    <string name="there_is_no_task_assigned_to_you">There is no task assigned to you</string>
    <string name="there_is_no_groups_yet">You have no group yet</string>

</resources>