<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.dialogs.AddGroupDialog">

    <data>
        <variable
            name="groupsViewModel"
            type="com.example.doit.viewmodel.GroupsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/group_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="250dp">
        <ImageButton
            android:id="@+id/avatar_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@null"
             />
        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/group_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/group_name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/group_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/group_img"
            app:layout_constraintTop_toTopOf="@id/group_img" />

        <EditText
            android:id="@+id/group_dec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/group_dec"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/group_img"
            app:layout_constraintTop_toBottomOf="@id/group_img" />


        <ImageView
            android:id="@+id/members_avatar"
            android:layout_width="@dimen/large_avatar"
            android:layout_height="@dimen/large_avatar"
            android:background="@drawable/ic_baseline_group_24"
            android:onClick="@{()->groupsViewModel.addMembersDialog()}"
            app:layout_constraintEnd_toEndOf="@id/create"
            app:layout_constraintStart_toStartOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/group_dec" />

        <TextView
            android:id="@+id/members_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"
            app:layout_constraintEnd_toEndOf="@id/members_avatar"
            app:layout_constraintStart_toStartOf="@id/members_avatar"
            app:layout_constraintTop_toBottomOf="@id/members_avatar" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="@dimen/dialog_btn"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/create"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/members_text" />

        <Button
            android:id="@+id/create"
            android:layout_width="@dimen/dialog_btn"
            android:layout_height="wrap_content"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/members_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>