<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterFragment">

    <data>
        <variable
            name="RegisterViewModel"
            type="com.example.doit.RegisterViewModel" />
<!--        <variable
            name="indenticalPass"
            type="androidx.lifecycle.MutableLiveData&lt;Boolean&gt;" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:layout_marginTop="20dp"
            android:onTextChanged="@{RegisterViewModel::onFirstNameChange}"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:layout_marginTop="10dp"
            android:onTextChanged="@{RegisterViewModel::onLastNameChange}"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:onTextChanged="@{RegisterViewModel::onEmailChange}"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:layout_marginTop="10dp"
            android:onTextChanged="@{RegisterViewModel::onPhoneChange}"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:onTextChanged="@{RegisterViewModel::onPasswordChange}"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/validatPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@{ RegisterViewModel.passwordsIdentical ? @android:color/transparent : @color/design_default_color_error}"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:onTextChanged="@{RegisterViewModel::onPasswordValidateChange}"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/register"
            android:onClick="@{() -> RegisterViewModel.register()}"
            app:layout_constraintTop_toBottomOf="@id/validatPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>