<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.GroupsDetailsFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="group"
            type="com.example.doit.model.entities.Group" />

        <variable
            name="groupsViewModel"
            type="com.example.doit.viewmodel.GroupsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/group_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            setGroupImage="@{group._image}"
            />

        <ViewSwitcher
            android:id="@+id/group_name_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_image">

            <TextView
                android:id="@+id/group_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{group._name, default= groupname}"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@{group._name, default= groupname}"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:textStyle="bold" />
        </ViewSwitcher>

        <ViewSwitcher
            android:id="@+id/group_desc_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/group_name_switcher"
            app:layout_constraintTop_toBottomOf="@id/group_name_switcher">

            <TextView
                android:id="@+id/group_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{group._description, default=description}"
                android:textSize="18sp"

                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_desc_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@{group._description, default=description}"
                android:inputType="text"
                android:textSize="18sp" />
        </ViewSwitcher>

        <TextView
            android:id="@+id/members_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members_title"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="@+id/group_desc_switcher"
            app:layout_constraintTop_toBottomOf="@+id/group_desc_switcher" />

        <Spinner
            android:id="@+id/members_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/members_title"
            app:layout_constraintStart_toEndOf="@id/members_title"
            android:layout_marginStart="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/add_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/members_spinner"
            app:layout_constraintStart_toStartOf="@id/members_title"
            android:text="@string/add_user"
            android:layout_marginTop="@dimen/small_margin"
            />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="@{groupsViewModel._isEdit ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>